# ps2spi

./: .clang-format  CMakeLists.txt  LICENSE
.github/workflows/: avr.yml
cmake/: avr.cmake
include/ps2spi/: ps2_keyboard_codes.def  ps2_keyboard_codes_enum.h
src/: main.c
src/keyboard/: CMakeLists.txt
src/keyboard/include/keyboard/: keyboard.h
src/keyboard/src/: keyboard.c  keyboard_key_types.def  keyboard_selectors.def  keyboard_sequences.def  keyboard_states.def
src/keyboard/test/: main.c
src/mouse/: CMakeLists.txt
src/mouse/include/mouse/: mouse.h
src/mouse/src/: mouse.c  mouse_states.def
src/mouse/test/: main.c
src/ps2/: CMakeLists.txt
src/ps2/include/ps2/: ps2.h
src/ps2/src/: ps2.c
src/ps2_mock/: CMakeLists.txt  test.gdb
src/ps2_mock/include/ps2_mock/: ps2_mock.h
src/ps2_mock/src/: ps2_mock.c
